--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
+### App Configs
+blox.market.engine=noop
 ### Database Configs
 flyway.migrate=true
+quarkus.datasource.devservices.enabled=true
+quarkus.datasource.devservices.image-name=postgres:13.4
+quarkus.datasource.devservices.port=5432
 quarkus.datasource.jdbc=false
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
